--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.31.0
-pandas==2.1.4
-numpy==1.26.3
-scikit-learn==1.4.0
-matplotlib==3.8.2
-seaborn==0.13.1
-plotly==5.18.0
-imbalanced-learn==0.11.0
-joblib==1.3.2
+streamlit>=1.36.0
+pandas==2.3.3
+numpy==2.3.5
+scikit-learn==1.7.2
+matplotlib==3.10.7
+seaborn==0.13.2
+plotly==6.5.0
+imbalanced-learn==0.14.0
+joblib==1.5.2
